--- a/src/assets/app/css/custom.css
+++ b/src/assets/app/css/custom.css
@@ -13,25 +13,89 @@ html{
 }
 
 
-.job-meta-item:not(:last-child):after {
-    content: "";
-    width: 3px;
-    height: 3px;
-    background: rgb(107 114 128 / var(--tw-text-opacity));
-    display: block;
-    border-radius: 100%;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
+
+
+@-webkit-keyframes scrolling-left {
+    0% {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translate3d(-100%,0,0);
+                transform: translate3d(-100%,0,0)
+    }
 }
 
-.job-meta-item:not(:last-child) {
-    padding-right: 8px;
-}
-@media(min-width:768px){
-    .job-meta-item:not(:last-child) {
-        padding-right: 12px;
+@keyframes scrolling-left {
+    0% {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+        visibility: visible
     }
+
+    to {
+        -webkit-transform: translate3d(-100%,0,0);
+                transform: translate3d(-100%,0,0)
+    }
+}
+
+@-webkit-keyframes scrolling-right {
+    0% {
+        -webkit-transform: translate3d(-100%,0,0);
+                transform: translate3d(-100%,0,0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0)
+    }
+}
+
+@keyframes scrolling-right {
+    0% {
+        -webkit-transform: translate3d(-100%,0,0);
+                transform: translate3d(-100%,0,0);
+        visibility: visible
+    }
+
+    to {
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0)
+    }
+}
+
+.promotion-animated {
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-play-state: running;
+            animation-play-state: running;
+    width: -moz-max-content;
+    width: -webkit-max-content;
+    width: max-content;
+    will-change: transform,width;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    -webkit-transform: translateX(0);
+            transform: translateX(0)
+}
+
+.partner-logo-animated {
+    -webkit-animation-duration: 22s;
+            animation-duration: 22s
+}
+
+.scrolling-left {
+    -webkit-animation-name: scrolling-left;
+            animation-name: scrolling-left
+}
+
+.scrolling-right {
+    -webkit-animation-name: scrolling-right;
+            animation-name: scrolling-right
 }
