--- a/src/assets/app/css/style.css
+++ b/src/assets/app/css/style.css
@@ -737,56 +737,16 @@ html {
   top: 0px;
 }
 
-.top-24 {
-  top: 6rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
 .top-1\/2 {
   top: 50%;
 }
 
-.bottom-1\/2 {
-  bottom: 50%;
-}
-
-.top-3\/4 {
-  top: 75%;
-}
-
-.top-2\/3 {
-  top: 66.666667%;
-}
-
-.bottom-3\/4 {
-  bottom: 75%;
-}
-
-.bottom-2\/3 {
-  bottom: 66.666667%;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
-}
-
-.top-1\/4 {
-  top: 25%;
+.top-\[15\%\] {
+  top: 15%;
 }
 
 .top-\[20\%\] {
   top: 20%;
-}
-
-.top-\[10\%\] {
-  top: 10%;
-}
-
-.top-\[15\%\] {
-  top: 15%;
 }
 
 .z-0 {
@@ -843,6 +803,11 @@ html {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-8 {
@@ -947,56 +912,32 @@ html {
   height: 300px;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[65vh\] {
-  height: 65vh;
-}
-
-.h-\[60vh\] {
-  height: 60vh;
+.h-\[80\%\] {
+  height: 80%;
 }
 
 .h-\[90\%\] {
   height: 90%;
 }
 
-.h-\[85\%\] {
-  height: 85%;
-}
-
-.h-\[75\%\] {
-  height: 75%;
-}
-
-.h-\[80\%\] {
-  height: 80%;
+.h-full {
+  height: 100%;
 }
 
 .max-h-16 {
   max-height: 4rem;
 }
 
-.min-h-\[65vh\] {
-  min-height: 65vh;
+.min-h-\[600px\] {
+  min-height: 600px;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.min-h-\[600px\] {
-  min-height: 600px;
-}
-
-.min-h-\[650px\] {
-  min-height: 650px;
-}
-
-.w-20 {
-  width: 5rem;
+.w-16 {
+  width: 4rem;
 }
 
 .w-4 {
@@ -1013,6 +954,10 @@ html {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-\[150px\] {
@@ -1035,46 +980,6 @@ html {
   width: 100%;
 }
 
-.w-16 {
-  width: 4rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[350px\] {
-  width: 350px;
-}
-
-.w-\[375px\] {
-  width: 375px;
-}
-
-.w-\[380px\] {
-  width: 380px;
-}
-
-.w-\[100px\] {
-  width: 100px;
-}
-
 .max-w-20 {
   max-width: 5rem;
 }
@@ -1089,14 +994,6 @@ html {
 
 .max-w-\[600px\] {
   max-width: 600px;
-}
-
-.max-w-64 {
-  max-width: 16rem;
-}
-
-.max-w-xs {
-  max-width: 20rem;
 }
 
 .max-w-sm {
@@ -1117,6 +1014,11 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-x-1\/2 {
   --tw-translate-x: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1124,11 +1026,6 @@ html {
 
 .translate-y-1\/2 {
   --tw-translate-y: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1289,6 +1186,10 @@ html {
   border-radius: 1rem;
 }
 
+.rounded-\[0\.5rem\] {
+  border-radius: 0.5rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1375,59 +1276,24 @@ html {
   background-color: rgb(37 96 78 / var(--tw-bg-opacity));
 }
 
-.bg-slate-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-red-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-50 {
+.bg-slate-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 252 232 / var(--tw-bg-opacity));
-}
-
-.bg-blue-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
-}
-
-.bg-sky-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 249 255 / var(--tw-bg-opacity));
-}
-
-.bg-cyan-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 254 255 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
-}
-
-.bg-green-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
-}
-
-.bg-teal-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 253 250 / var(--tw-bg-opacity));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-slate-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1444,24 +1310,12 @@ html {
   --tw-gradient-to: #e9f6f2 var(--tw-gradient-to-position);
 }
 
-.bg-\[length\:auto_1500px\] {
-  background-size: auto 1500px;
-}
-
 .bg-contain {
   background-size: contain;
 }
 
-.bg-center {
-  background-position: center;
-}
-
 .bg-left {
   background-position: left;
-}
-
-.bg-right-bottom {
-  background-position: right bottom;
 }
 
 .bg-right {
@@ -1545,11 +1399,6 @@ html {
 .py-1\.5 {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .py-16 {
@@ -1654,9 +1503,13 @@ html {
   line-height: 2rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[0\.85rem\] {
+  font-size: 0.85rem;
 }
 
 .text-base {
@@ -1677,11 +1530,6 @@ html {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-medium {
@@ -1706,10 +1554,6 @@ html {
 
 .leading-\[1\.1\] {
   line-height: 1.1;
-}
-
-.leading-\[1\.2\] {
-  line-height: 1.2;
 }
 
 .leading-\[1\.3\] {
@@ -1765,44 +1609,9 @@ html {
   color: rgb(37 96 78 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-red-900 {
   --tw-text-opacity: 1;
   color: rgb(127 29 29 / var(--tw-text-opacity));
-}
-
-.text-yellow-900 {
-  --tw-text-opacity: 1;
-  color: rgb(113 63 18 / var(--tw-text-opacity));
-}
-
-.text-blue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(30 58 138 / var(--tw-text-opacity));
-}
-
-.text-sky-900 {
-  --tw-text-opacity: 1;
-  color: rgb(12 74 110 / var(--tw-text-opacity));
-}
-
-.text-cyan-900 {
-  --tw-text-opacity: 1;
-  color: rgb(22 78 99 / var(--tw-text-opacity));
-}
-
-.text-indigo-900 {
-  --tw-text-opacity: 1;
-  color: rgb(49 46 129 / var(--tw-text-opacity));
-}
-
-.text-teal-900 {
-  --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
 }
 
 .text-slate-900 {
@@ -1810,20 +1619,13 @@ html {
   color: rgb(15 23 42 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .opacity-50 {
   opacity: 0.5;
-}
-
-.opacity-80 {
-  opacity: 0.8;
-}
-
-.opacity-0 {
-  opacity: 0;
-}
-
-.opacity-5 {
-  opacity: 0.05;
 }
 
 .shadow {
@@ -1923,6 +1725,15 @@ html {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.hover\:border-0:hover {
+  border-width: 0px;
+}
+
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .hover\:bg-primary-550:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(65 169 138 / var(--tw-bg-opacity));
@@ -1941,6 +1752,30 @@ html {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:outline:hover {
+  outline-style: solid;
+}
+
+.hover\:outline-1:hover {
+  outline-width: 1px;
+}
+
+.hover\:outline-primary-100:hover {
+  outline-color: #bde5d9;
+}
+
+.hover\:outline-primary-60:hover {
+  outline-color: #daf1ea;
+}
+
+.hover\:outline-primary-80:hover {
+  outline-color: #ccebe2;
+}
+
+.hover\:outline-primary-150:hover {
+  outline-color: #aee0d1;
 }
 
 .focus\:ring-1:focus {
@@ -1975,24 +1810,12 @@ html {
   outline-offset: 2px;
 }
 
-.group:hover .group-hover\:visible {
-  visibility: visible;
-}
-
 .group\/job:hover .group-hover\/job\:visible {
   visibility: visible;
 }
 
 .group:hover .group-hover\:opacity-90 {
   opacity: 0.9;
-}
-
-.group:hover .group-hover\:opacity-0 {
-  opacity: 0;
-}
-
-.group:hover .group-hover\:opacity-50 {
-  opacity: 0.5;
 }
 
 @media (min-width: 640px) {
@@ -2020,16 +1843,12 @@ html {
     width: auto;
   }
 
-  .sm\:max-w-sm {
-    max-width: 24rem;
-  }
-
-  .sm\:max-w-md {
-    max-width: 28rem;
-  }
-
   .sm\:max-w-lg {
     max-width: 32rem;
+  }
+
+  .sm\:max-w-sm {
+    max-width: 24rem;
   }
 
   .sm\:grid-cols-2 {
@@ -2044,10 +1863,6 @@ html {
     flex-direction: column;
   }
 
-  .sm\:items-center {
-    align-items: center;
-  }
-
   .sm\:gap-x-2 {
     -moz-column-gap: 0.5rem;
          column-gap: 0.5rem;
@@ -2057,22 +1872,18 @@ html {
     padding-top: 6rem;
   }
 
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
 
-  .sm\:leading-6 {
-    line-height: 1.5rem;
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
-  .sm\:leading-\[1\.2\] {
-    line-height: 1.2;
+  .sm\:leading-6 {
+    line-height: 1.5rem;
   }
 
   .sm\:leading-\[1\.3\] {
@@ -2091,20 +1902,12 @@ html {
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-1\/2 {
-    bottom: 50%;
+  .md\:bottom-\[45\%\] {
+    bottom: 45%;
   }
 
   .md\:top-auto {
     top: auto;
-  }
-
-  .md\:bottom-1\/3 {
-    bottom: 33.333333%;
-  }
-
-  .md\:bottom-\[45\%\] {
-    bottom: 45%;
   }
 
   .md\:order-none {
@@ -2160,10 +1963,6 @@ html {
     height: 350px;
   }
 
-  .md\:max-h-20 {
-    max-height: 5rem;
-  }
-
   .md\:min-h-\[650px\] {
     min-height: 650px;
   }
@@ -2188,10 +1987,6 @@ html {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:gap-3 {
     gap: 0.75rem;
   }
@@ -2205,12 +2000,9 @@ html {
          column-gap: 1rem;
   }
 
-  .md\:bg-\[length\:auto_2000px\] {
-    background-size: auto 2000px;
-  }
-
-  .md\:bg-center {
-    background-position: center;
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:text-5xl {
@@ -2226,26 +2018,9 @@ html {
   .md\:leading-\[1\.1\] {
     line-height: 1.1;
   }
-
-  .md\:leading-\[1\.2\] {
-    line-height: 1.2;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:bottom-1\/2 {
-    bottom: 50%;
-  }
-
-  .lg\:top-auto {
-    top: auto;
-  }
-
-  .lg\:mx-6 {
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-  }
-
   .lg\:mb-10 {
     margin-bottom: 2.5rem;
   }
@@ -2278,12 +2053,12 @@ html {
     height: 400px;
   }
 
-  .lg\:min-h-\[75vh\] {
-    min-height: 75vh;
-  }
-
   .lg\:min-h-\[700px\] {
     min-height: 700px;
+  }
+
+  .lg\:w-20 {
+    width: 5rem;
   }
 
   .lg\:w-\[250px\] {
@@ -2296,10 +2071,6 @@ html {
 
   .lg\:w-\[400px\] {
     width: 400px;
-  }
-
-  .lg\:w-20 {
-    width: 5rem;
   }
 
   .lg\:max-w-24 {
@@ -2322,10 +2093,6 @@ html {
   .lg\:translate-y-1\/3 {
     --tw-translate-y: 33.333333%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:items-center {
-    align-items: center;
   }
 
   .lg\:gap-6 {
@@ -2357,12 +2124,12 @@ html {
     padding-bottom: 0.75rem;
   }
 
-  .lg\:pt-32 {
-    padding-top: 8rem;
-  }
-
   .lg\:pr-32 {
     padding-right: 8rem;
+  }
+
+  .lg\:pt-32 {
+    padding-top: 8rem;
   }
 
   .lg\:text-2xl {
@@ -2403,11 +2170,6 @@ html {
     grid-column: span 3 / span 3;
   }
 
-  .xl\:mx-8 {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-
   .xl\:mt-0 {
     margin-top: 0px;
   }
@@ -2418,10 +2180,6 @@ html {
 
   .xl\:flex {
     display: flex;
-  }
-
-  .xl\:inline-flex {
-    display: inline-flex;
   }
 
   .xl\:grid {
@@ -2444,6 +2202,10 @@ html {
     height: 450px;
   }
 
+  .xl\:w-\[200px\] {
+    width: 200px;
+  }
+
   .xl\:w-\[250px\] {
     width: 250px;
   }
@@ -2452,16 +2214,12 @@ html {
     width: 300px;
   }
 
-  .xl\:w-\[450px\] {
-    width: 450px;
-  }
-
-  .xl\:w-\[200px\] {
-    width: 200px;
-  }
-
   .xl\:w-\[380px\] {
     width: 380px;
+  }
+
+  .xl\:w-\[450px\] {
+    width: 450px;
   }
 
   .xl\:grid-cols-5 {
@@ -2470,14 +2228,6 @@ html {
 
   .xl\:gap-8 {
     gap: 2rem;
-  }
-
-  .xl\:bg-\[length\:auto_2600px\] {
-    background-size: auto 2600px;
-  }
-
-  .xl\:bg-center {
-    background-position: center;
   }
 
   .xl\:text-7xl {
