--- a/src/assets/app/css/custom.css
+++ b/src/assets/app/css/custom.css
@@ -86,8 +86,8 @@ html{
 }
 
 .partner-logo-animated {
-    -webkit-animation-duration: 22s;
-            animation-duration: 22s
+    -webkit-animation-duration: 36s;
+            animation-duration: 36s
 }
 
 .scrolling-left {
@@ -107,3 +107,69 @@ html{
 }
 
 
+.pc-menu .dropdown-menu{
+    width: 220px;
+    position: absolute;
+    top: calc(100% + 15px);
+    opacity: 0;
+    left: 0;
+    z-index: 0;
+    visibility: hidden;
+    background: #fff;
+    border: solid 1px #eee;
+    box-shadow: 0 4px 24px 0 rgba(88,102,126,.08),0 1px 2px 0 rgba(88,102,126,.12);
+    padding: 5px 0;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -ms-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    border-radius: 0.6rem;
+    -webkit-border-radius: 0.6rem;
+    -moz-border-radius: 0.6rem;
+}
+.pc-menu .dropdown-menu.mega-menu {
+    width: 100%;
+}
+.pc-menu>li:hover>.dropdown-menu{
+    display: block;
+    top: 100%;
+    z-index: 2001;
+    visibility: visible;
+    opacity: 1;
+}
+
+.pc-menu .dropdown-menu:after {
+    content: "";
+    width: 0;
+    height: 0;
+    z-index: 9999;
+    top: -7px;
+    left: var(--left);
+    display: block;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid #fff;
+    position: absolute;
+}
+
+.pc-menu .dropdown-menu:before {
+    content: "";
+    width: 0;
+    height: 0;
+    z-index: 9999;
+    top: -8px;
+    left: var(--left);
+    display: block;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid var(--gray-color);
+    position: absolute;
+}
+.toggle-mobile-submenu.is-active svg {
+    transform: rotate(90deg);
+}
+
+.toggle-mobile-submenu svg {
+    transition: all .25s;
+}
