--- a/src/assets/app/css/custom.css
+++ b/src/assets/app/css/custom.css
@@ -1,4 +1,4 @@
-html{
+html {
     scroll-behavior: smooth;
 }
 .hero-slider .hero-swiper-pagination {
@@ -12,102 +12,98 @@ html{
     background: #fff;
 }
 
-
-
-
 @-webkit-keyframes scrolling-left {
     0% {
         -webkit-transform: translateZ(0);
-                transform: translateZ(0);
-        visibility: visible
+        transform: translateZ(0);
+        visibility: visible;
     }
 
     to {
-        -webkit-transform: translate3d(-100%,0,0);
-                transform: translate3d(-100%,0,0)
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
     }
 }
 
 @keyframes scrolling-left {
     0% {
         -webkit-transform: translateZ(0);
-                transform: translateZ(0);
-        visibility: visible
+        transform: translateZ(0);
+        visibility: visible;
     }
 
     to {
-        -webkit-transform: translate3d(-100%,0,0);
-                transform: translate3d(-100%,0,0)
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
     }
 }
 
 @-webkit-keyframes scrolling-right {
     0% {
-        -webkit-transform: translate3d(-100%,0,0);
-                transform: translate3d(-100%,0,0);
-        visibility: visible
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
     }
 
     to {
         -webkit-transform: translateZ(0);
-                transform: translateZ(0)
+        transform: translateZ(0);
     }
 }
 
 @keyframes scrolling-right {
     0% {
-        -webkit-transform: translate3d(-100%,0,0);
-                transform: translate3d(-100%,0,0);
-        visibility: visible
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0);
+        visibility: visible;
     }
 
     to {
         -webkit-transform: translateZ(0);
-                transform: translateZ(0)
+        transform: translateZ(0);
     }
 }
 
 .promotion-animated {
     -webkit-animation-iteration-count: infinite;
-            animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
     -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+    animation-timing-function: linear;
     -webkit-animation-play-state: running;
-            animation-play-state: running;
+    animation-play-state: running;
     width: -moz-max-content;
     width: -webkit-max-content;
     width: max-content;
-    will-change: transform,width;
+    will-change: transform, width;
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 auto;
-            flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
     -webkit-transform: translateX(0);
-            transform: translateX(0)
+    transform: translateX(0);
 }
 
 .partner-logo-animated {
     -webkit-animation-duration: 36s;
-            animation-duration: 36s
+    animation-duration: 36s;
 }
 
 .scrolling-left {
     -webkit-animation-name: scrolling-left;
-            animation-name: scrolling-left
+    animation-name: scrolling-left;
 }
 
 .scrolling-right {
     -webkit-animation-name: scrolling-right;
-            animation-name: scrolling-right
+    animation-name: scrolling-right;
 }
 
 .promotion-animated-group.is-hover .scrolling-left,
 .promotion-animated-group.is-hover .scrolling-right {
     -webkit-animation-play-state: paused;
-            animation-play-state: paused;
+    animation-play-state: paused;
 }
 
-
-.pc-menu .dropdown-menu{
+.pc-menu .dropdown-menu {
     width: 220px;
     position: absolute;
     top: calc(100% + 15px);
@@ -117,13 +113,14 @@ html{
     visibility: hidden;
     background: #fff;
     border: solid 1px #eee;
-    box-shadow: 0 4px 24px 0 rgba(88,102,126,.08),0 1px 2px 0 rgba(88,102,126,.12);
+    box-shadow: 0 4px 24px 0 rgba(88, 102, 126, 0.08),
+        0 1px 2px 0 rgba(88, 102, 126, 0.12);
     padding: 5px 0;
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -ms-transition: all .3s;
-    -moz-transition: all .3s;
-    -o-transition: all .3s;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
     border-radius: 0.6rem;
     -webkit-border-radius: 0.6rem;
     -moz-border-radius: 0.6rem;
@@ -131,7 +128,7 @@ html{
 .pc-menu .dropdown-menu.mega-menu {
     width: 100%;
 }
-.pc-menu>li:hover>.dropdown-menu{
+.pc-menu > li:hover > .dropdown-menu {
     display: block;
     top: 100%;
     z-index: 2001;
@@ -171,5 +168,13 @@ html{
 }
 
 .toggle-mobile-submenu svg {
-    transition: all .25s;
+    transition: all 0.25s;
+}
+
+.hidden-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+.hidden-scrollbar {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
